<resources>
    <string name="app_name">EasyReddit</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_favourites">Favourites</string>

    <string name="refresh_toast_message">List is Refreshed</string>
    <string name="toast_sorting_message">Sorting cannot be applied to Home and Favourites.</string>

    <string name="favorites_toast_message">SuccessFully added as a Favorite</string>
    <string name="favorites_deleted_toast_message">SuccessFully Deleted From Favorites</string>

    <string name="share_link_url">url</string>
    <string name="share_link_title">Share link</string>

    <string name="tracker_screen_detail_activity">Detail Activity</string>

    <string name="comments_points"> Points</string>


    <string name="comment_testing_Text">Testing Comments</string>


    <string name="favorite_content_rating_view">ratings view</string>
    <string name="favorite_content_comment_view">Comments view</string>
    <string name="favorite_header">Favorites</string>
    <string name="no_favorite_header">No_favourites</string>
    <string name="no_internet_content_image">No Internet Image</string>

    <string name="no_internet_no_connection_text">Make Sure that Device is Connected to Internet</string>

    <string name="no_favorites">No Favorites</string>

    <string name="no_internet_tab_retry_text">Tab to Retry</string>

    <string name="no_internet_tab_retry_image_button">retry Image button</string>

    <string name="reddit_list_item_title_view">Title View</string>

    <string name="reddit_list_item_title_view_image_description">Thumbnail Image</string>


    <string name="reddit_list_item_comment_view">12333</string>

    <string name="reddit_list_item_comment_view_image_description">Comments view</string>

    <string name="reddit_list_item_rating_view">1245</string>

    <string name="reddit_list_item_rating_view_image_description">ratings view</string>

    <string name="reddit_list_toolbar_string">toolbar_title</string>

    <string name="reddit_detail_content_reddit_image">Reddit Image</string>

    <string name="reddit_detail_content_comment_image">Comments view</string>

    <string name="reddit_detail_content_rating_image">ratings view</string>

    <string name="reddit_detail_content_favorite_button_image">Adding Favorite</string>
    <string name="reddit_detail_content_share_button_image">Share post</string>


    <string name="nav_bar_favorite_string">favorites</string>
    <string name="nav_bar_subreddit_string">Subreddits</string>

    <string name="sort_menu_search_string">search</string>

<<<<<<< HEAD
    <string name="nav_bar_favorite_string">favorites</string>
    <string name="nav_bar_subreddit_string">Subreddits</string>

    <string name="sort_menu_search_string">search</string>

    <string name="sort_menu_title_string">sort</string>






=======
    <string name="sort_menu_title_string">sort</string>
>>>>>>> 3e90bbb9578d538acbeef5f70caaca92efb1842f


    <!--<string name="unsupported_content_provider_exception">Unsupported Uri</string>-->
    <!--<string name="unsupported_content_provider_insertion_exception">Unsupported Uri For Insertion</string>-->
    <!--<string name="unsupported_content_provider_deletion_exception">Unsupported Uri For Deletion </string>-->


    <!--progress dialog messages-->
    <string name="dialog_title">Loading.....</string>

    <string name="dialog_message">Fetching Data</string>


    <!--fragment comments Arguments-->

    <string name="fragment_comments_data">fragmentdata</string>


    <!--comments json keys-->
    <string name="comments_json_data_key">data</string>
    <string name="comments_json_children_key">children</string>
    <string name="comments_json_body_key">body</string>
    <string name="comments_json_created_utc_key">created_utc</string>
    <string name="comments_json_ups_key">ups</string>
    <string name="comments_json_downs_key">downs</string>
    <string name="comments_json_author_key">author</string>


    <!--sorting category-->

    <string name="sort_category_hot">hot</string>
    <string name="sort_category_new">new</string>
    <string name="sort_category_controversial">controversial</string>
    <string name="sort_category_top">top</string>


    <!--Google analytics Strings-->
    <string name="tracker_main_list_activiy">MainList Activity</string>


    <string name="saved_instance_commments_key" translatable="false">save comments</string>


    <!--reddit data keys-->

    <string name="reddit_data_id" translatable="false">id</string>
    <string name="reddit_data_post_id" translatable="false">post_id</string>
    <string name="reddit_data_title" translatable="false">title</string>
    <string name="reddit_data_author" translatable="false">author</string>
    <string name="reddit_data_permalink" translatable="false">permalink</string>
    <string name="reddit_data_score" translatable="false">score</string>
    <string name="reddit_data_num_comments" translatable="false">num_comments</string>
    <string name="reddit_data_image_url" translatable="false">image_url</string>
    <string name="reddit_data_url" translatable="false">url</string>
    <string name="reddit_data_thumbnail" translatable="false">thumbnail</string>
    <string name="reddit_data_posted_on" translatable="false">postedOn</string>
    <string name="reddit_data_posted_on1" translatable="false">posted_on</string>
    <string name="reddit_data_subreddit" translatable="false">subreddit</string>
    <string name="reddit_data_over_18" translatable="false">over_18</string>
    <string name="reddit_data_created_utc" translatable="false">created_utc</string>
    <string name="reddit_data_points" translatable="false">points</string>
    <string name="reddit_data_favorites" translatable="false">favorites</string>


    <!--reddit Json fetching keys-->


    <string name="reddit_json_data_key" translatable="false">data</string>

    <string name="reddit_json_after_key" translatable="false">after</string>


    <string name="reddit_json_children_key" translatable="false">children</string>

    <string name="reddit_json_title_key" translatable="false">title</string>

    <string name="reddit_json_author_key" translatable="false">author</string>

    <string name="reddit_json_num_comments_key" translatable="false">num_comments</string>

    <string name="reddit_json_score_key" translatable="false">score</string>

    <string name="reddit_json_thumbnail_key" translatable="false">thumbnail</string>

    <string name="reddit_json_over_18_key" translatable="false">over_18</string>

    <string name="reddit_json_url_key" translatable="false">url</string>

    <string name="reddit_json_id_key" translatable="false">id</string>

    <string name="reddit_json_subreddit_key" translatable="false">subreddit</string>

    <string name="reddit_json_permalink_key" translatable="false">permalink</string>

    <string name="reddit_json_created_utc_key" translatable="false">created_utc</string>

    <string name="reddit_json_preview_key" translatable="false">preview</string>

    <string name="reddit_json_images_key" translatable="false">images</string>

    <string name="reddit_json_resolutions_key" translatable="false">resolutions</string>


    <string name="Subreddits_shared_preferences">com.udacity.easyreddit</string>
    <string name="subreddits_key">SUBREDDIT_KEY</string>


    <string name="first_run" translatable="false">firstrun</string>
    <string name="initial_subs" translatable="false">home,all,announcements,Art,AskReddit,askscience,aww,blog,books,creepy,dataisbeautiful,DIY,Documentaries,EarthPorn,explainlikeimfive,Fitness,food,funny,Futurology,gadgets,gaming,GetMotivated,gifs,history,IAmA,InternetIsBeautiful,Jokes,LifeProTips,listentothis,mildlyinteresting,movies,Music,news,nosleep,nottheonion,OldSchoolCool,personalfinance,philosophy,photoshopbattles,pics,science,Showerthoughts,space,sports,television,tifu,todayilearned,TwoXChromosomes,UpliftingNews,videos,worldnews,WritingPrompts</string>

    <string name="hot">Hot</string>
    <string name="new1">New</string>
    <string name="top">Top</string>
    <string name="controversial">Controversial</string>
    <string name="sort">sort</string>

    <string name="HomePage" translatable="false">home</string>


    <string name="listitems" translatable="false">listItems</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="share">Share</string>


    <string name="google_ads_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="liststate_key" translatable="false">listState</string>


<<<<<<< HEAD
    <string translatable="false" name="data_update_key">com.udacity.easyreddit.ACTION_DATA_UPDATED</string>
    <string translatable="false" name="arg_item_id">item_id</string>
    <string name="widget_id_key" translatable="false">mywidgetproviderwidgetids</string>
=======
    <!--widgetkeymodels-->
>>>>>>> 3e90bbb9578d538acbeef5f70caaca92efb1842f

    <string name="data_update_key" translatable="false">com.udacity.easyreddit.ACTION_DATA_UPDATED</string>
    <string name="arg_item_id" translatable="false">item_id</string>
    <string name="widget_id_key" translatable="false">mywidgetproviderwidgetids</string>

                  <!--ManageSubredditStrings-->

    <string name="reordering_icon_for_moving_the_subreddits_around">Reordering icon for moving the subreddits around</string>

    <string translatable="true" name="manage_subreddits">Manage Subreddits</string>


    <string name="add_new_subreddit">Add new Subreddit</string>



</resources>
