<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">




<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.RedditDetailActivity">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mainSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:contentDescription="@string/reddit_detail_content_reddit_image"
                android:scaleType="fitXY" />


            <LinearLayout
                android:id="@+id/linearheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/cardview_dark_background"
                android:weightSum="1"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="52dp"
                        android:layout_height="29dp"
                        android:layout_gravity="center_horizontal"
                        android:foregroundGravity="center_vertical"
                        android:contentDescription="@string/reddit_detail_content_comment_image"
                        android:src="@drawable/chat" />

                    <TextView
                        android:id="@+id/comments"
                        android:layout_width="wrap_content"
                        android:layout_height="29dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/reddit_list_item_comment_view"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="37dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="ratings view"
                        android:src="@drawable/ratings" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="53dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:paddingStart="7dp"
                        android:text="@string/reddit_list_item_rating_view"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/addFav"
                    android:layout_width="46dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:layout_weight="0.15"
                    android:contentDescription="@string/reddit_detail_content_favorite_button_image"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/favorite_item_selector" />

                <ImageButton
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.15"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/reddit_detail_content_share_button_image"
                    android:src="@drawable/ic_more_vert_white_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/titleHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_dark_background"

                >

                <TextView
                    android:id="@+id/headerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="20sp"

                    />




            </LinearLayout>


            <android.support.v7.widget.RecyclerView

                android:id="@+id/commentRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:descendantFocusability="afterDescendants"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/recycler_view_item"
                 />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/googleadView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/google_ads_id" />





</FrameLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:visibility="gone"
        android:id="@+id/fragment_progress_bar"
        android:layout_marginBottom="211dp" />

</RelativeLayout>