<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widgetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/widgeSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                tools:text="@string/comment_testing_Text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="37dp"
                    android:focusable="false"
                    android:paddingRight="10sp"
                    android:contentDescription="@string/favorite_content_rating_view"
                    android:src="@drawable/ratings" />

                <TextView
                    android:id="@+id/widgetPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="end"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    tools:text="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="36dp"
                    android:focusable="false"
                    android:paddingRight="10sp"
                    android:contentDescription="@string/favorite_content_comment_view"
                    android:src="@drawable/chat" />

                <TextView
                    android:id="@+id/widgetComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    tools:text="7" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>